fix: overflow de multiselect

--- a/src/pages/profile/styleForm.css
+++ b/src/pages/profile/styleForm.css
@@ -59,18 +59,6 @@
   border-color: var(--Linkedu-Blue);
 }
 
-.p-multiselect.p-multiselect-chip .p-multiselect-label {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 6px;
-  padding-right: 2.5rem;
-  white-space: normal;
-}
-
-.p-multiselect-token {
-  margin: 0 !important;
-}
-
 @media (max-width: 1100px) {
   .editcand-grid {
     grid-template-columns: 1fr 1fr;
